commit with test card alignment issue fixed

--- a/src/app/assessment/landing-page/task-card/task-cards.component.scss
+++ b/src/app/assessment/landing-page/task-card/task-cards.component.scss
@@ -130,6 +130,9 @@
 .assessments {
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .assessment {
